Correct menu vertical align

--- a/block/menu/mobile.css
+++ b/block/menu/mobile.css
@@ -17,6 +17,7 @@
 		display: flex;
 		flex-flow: row nowrap;
 		justify-content: space-around;
+		align-items: center;
 		height: 100%;
 		border-top: 1px solid black;
 	}
@@ -29,7 +30,6 @@
 		margin: unset;
 		text-decoration: none;
 		color: #000;
-		margin-top: 0.5rem;
 	}
 
 	.menu__item-hidden-mobile-part {
